[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/Puzzles/Puzzle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/Objects/Circuit/EquivalentResistor.png" type="Texture" id=2]
[ext_resource path="res://Resources/Puzzles/Chapter III/EquivalentResistor/EquivalentResistor.gd" type="Script" id=3]

[node name="EquivalentResistor" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Background" parent="." index="0"]
color = Color( 0.4, 0.4, 0.4, 1 )

[node name="InstructionLabel" type="Label" parent="." index="2"]
margin_left = 13.0824
margin_top = 2.27519
margin_right = 312.082
margin_bottom = 33.2752
text = "Identify which Resistors are in series 
                and in Parallel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningLabel" type="Label" parent="." index="3"]
margin_left = 214.285
margin_top = 155.672
margin_right = 254.285
margin_bottom = 169.672
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="." index="4"]
position = Vector2( 156.618, 92.3108 )
scale = Vector2( 0.395186, 0.395186 )
texture = ExtResource( 2 )

[node name="Series" type="Label" parent="." index="5"]
margin_left = 5.56511
margin_top = 134.237
margin_right = 48.5651
margin_bottom = 148.237
text = "Series:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Series1" type="LineEdit" parent="Series" index="0"]
margin_left = 2.84399
margin_top = 17.064
margin_right = 60.844
margin_bottom = 41.064
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Series2" type="LineEdit" parent="Series" index="1"]
margin_left = 50.0544
margin_top = 17.064
margin_right = 108.054
margin_bottom = 41.064
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Parallel" type="Label" parent="." index="6"]
margin_left = 108.745
margin_top = 133.548
margin_right = 159.745
margin_bottom = 147.548
text = "Parallel:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Parallel1" type="LineEdit" parent="Parallel" index="0"]
margin_left = 2.84399
margin_top = 17.064
margin_right = 60.844
margin_bottom = 41.064
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Parallel2" type="LineEdit" parent="Parallel" index="1"]
margin_left = 50.0544
margin_top = 17.064
margin_right = 108.054
margin_bottom = 41.064
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Submit" type="Button" parent="." index="7"]
margin_left = 214.915
margin_top = 136.134
margin_right = 271.915
margin_bottom = 156.134
rect_scale = Vector2( 0.7, 0.7 )
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_entered" from="Series/Series1" to="." method="_on_Series_text_entered"]
[connection signal="text_entered" from="Series/Series2" to="." method="_on_Series_text_entered"]
[connection signal="text_entered" from="Parallel/Parallel1" to="." method="_on_Parallel_text_entered"]
[connection signal="text_entered" from="Parallel/Parallel2" to="." method="_on_Parallel_text_entered"]
[connection signal="pressed" from="Submit" to="." method="_on_Submit_pressed"]
